# wayland-rust-client-experiment

./: Cargo.toml
server/: Cargo.toml
server/src/: eventloop.rs  main.rs
src/: buffer.rs  debug_callbacks.rs  lib.rs  main.rs  painter.rs  shared_memory.rs  surface.rs
src/seat/: mod.rs  pointer.rs  touch.rs
src/seat/keyboard/: missing_xkb_functions.rs  mod.rs
