[package]
name = "wayland-book-rust"
version = "0.1.0"
authors = ["Øystein Hiåsen <oystein.hiaasen@gmail.com>"]
edition = "2018"



[dependencies]
wayland-client = "0.26.6"
nix = "0.17.0"
memmap2 = "0.1.0"
bitflags = "1.2.1"
xkb = "0.2.1"
xkbcommon-sys = "0.7.4"

[dependencies.wayland-protocols]
version = "0.26.6"
features = ["client",]

[workspace]
members = ["server"]